<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/onboardingFragment">

    <!-- New: welcome splash -->
    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.example.brewbuddy.presentation.onboarding.OnboardingFragment"
        android:label="Welcome">
        <action
            android:id="@+id/action_onboarding_to_enterName"
            app:destination="@id/enterNameFragment" />
    </fragment>

    <!-- New: enter name -->
    <fragment
        android:id="@+id/enterNameFragment"
        android:name="com.example.brewbuddy.presentation.onboarding.EnterNameFragment"
        android:label="@string/enter_name">
        <action
            android:id="@+id/action_enterName_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.brewbuddy.presentation.home.HomeFragment"
        android:label="@string/tab_home" />

    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.brewbuddy.presentation.drinks.DrinkMenuFragment"
        android:label="@string/tab_menu" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.brewbuddy.presentation.favorites.FavoritesFragment"
        android:label="@string/tab_favorites" />

    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.example.brewbuddy.presentation.orders.OrdersFragment"
        android:label="@string/tab_orders" />

</navigation>
